[tool.poetry]
name = "repl-nix-coffee-website-upstream"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_coffee_website_upstream"}]

[tool.poetry.dependencies]
python = "^3.10"
slowapi = "^0.1.9"
uvicorn = "^0.30.1"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
